0.4.7
-----

- Added argagg::convert::parse_next_component()
- Added argagg::csv<T> and a corresponding argument conversion specialization
- Indexing argagg::parser_results with an option name that does not exist now
  throws an argagg::unknown_option instead of not handling the
  std::unordered_map::at() std::out_of_range exception (see #20).

0.4.6
-----

- Added use of argagg::fmt_ostream in gengetopt_main1 example
- Merged pull request #12
  -  replace static_cast<bool> w/ non-zero comparison to avoid compiler
     warnings on MSVC
- Typo fixes

0.4.5
-----

- Fixed bug in integer and float argument conversion specializations where
  invalid conversions were not being correctly handled. Invalid conversions
  (like "garbage" to float) will now throw an exception. Note though if the
  as<T>(default) overload is used (with a default value specified) then all
  exceptions in the conversion result in the default being returned.
- Changed base exception type for argagg exceptions from std::argument_error to
  std::runtime_error
- Now compiles with -Wpedantic

0.4.4
-----

- Added some minor error handling to argagg::fmt_string()

0.4.3
-----

- Added argagg::fmt_string() to format a string using the fmt program when
  compiling on a __unix__ platform. Degrades to an identity function when not
  on a __unix__ platform.
- Added argagg::fmt_ostream as a convenience stream that will stream the
  formatted string to the referenced final std::ostream when the
  argagg::fmt_ostream destructs
- Fixed bug when compiling with clang where the non-template implicit bool
  operator was being selected when implicitly converting to an integer. By
  making the implicit bool operator a specialization of the templated implicit
  conversion operator the compiler should now select the correct overload.

0.4.2
-----

- Fixed missing inline specifiers on argagg::convert::arg specializations,
  fixes multiple definitions bug

0.4.1
-----
